<resources>
    <string name="app_name">ClientApp</string>
    <string name="base_url">http://www.umori.li/</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tracker_navigation">Трекер</string>
    <string name="cabinet_navigation">Кабинет</string>
    <string name="chat_navigation">Чат</string>
    <string name="request_navigation">Заявка</string>
    <string name="useful_navigation">Полезное</string>
    <string name="tracker_button_text">Поиск</string>
    <string name="prompt_tracker">№ Контейнера/накладной</string>
    <string name="tracker_last_place_prompt">Пункт последнего местонахождения</string>
    <string name="tracker_status_prompt">Статус груза</string>

    <!--Request fragment-->
    <string name="prompt_request_fio">ФИО</string>
    <string name="prompt_request_company">Название компании</string>
    <string name="prompt_request_phone">Телефон</string>
    <string name="prompt_request_mail">e-mail</string>
    <string name="prompt_request_desc">Описание груза</string>
    <string name="prompt_request_photo">Прикрепить фото</string>
    <string name="prompt_request_calc">Рассчитать</string>
    <string name="settings">Settings</string>


    <!-- Left menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login">Войти</string>
    <string name="loyalty">Программа лояльности</string>
    <string name="call">Позвонить</string>
    <string name="nav_name">Name</string>
    <string name="nav_status">Статус 45НС</string>


    <!--SharedPreferences-->
    <string name="settings_login">login</string>
    <string name="settings_token">token</string>
    <string name="search">Поиск</string>
    <string name="no_data">No data</string>
    <string name="cabinet_sample_id">Sample Id</string>
    <string name="cabinet_sample_status">Sample status</string>
    <string name="cabinet_sample_place">Sample place</string>
    <string name="main_scheme_transportation">Основные схемы перевозок</string>
    <string name="helpful_contacts">Контакты</string>
</resources>
