<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/request_photo_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="visible" />


        <AutoCompleteTextView

            android:id="@+id/request_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/prompt_request_fio"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center" />

        <AutoCompleteTextView
            android:id="@+id/request_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/prompt_request_company"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center" />

        <AutoCompleteTextView
            android:id="@+id/request_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/prompt_request_phone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center" />

        <AutoCompleteTextView
            android:id="@+id/request_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/prompt_request_mail"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center" />

        <AutoCompleteTextView
            android:id="@+id/request_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/prompt_request_desc"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center" />

        <Button
            android:id="@+id/request_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorAccent"
            android:text="@string/prompt_request_photo"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/request_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorAccent"
            android:text="@string/prompt_request_calc"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>