<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/tracker_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_tracker"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center" />

    <Button
        android:id="@+id/tracker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracker_button_text" />

    <TextView
        android:id="@+id/tracker_last_place_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/tracker_last_place_prompt"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tracker_last_place_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin_double"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tracker_status_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/tracker_status_prompt"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tracker_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin_double"
        android:visibility="invisible" />


</LinearLayout>