<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_last_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabinet_sample_place"
            android:layout_alignParentTop="true"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabinet_sample_status"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabinet_sample_id"
        android:textSize="20sp"/>
</LinearLayout>